--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
     </div>
   </section>
 
+  <section class="avaliacoes">
+    <h2>Avaliações dos Nossos Clientes</h2>
+    <div class="avaliacao">
+      <h3>Isaías</h3>
+      <p>Obrigado, por terem tanta dedicação com os meus cachorros!<br>
+      Petsolux o melhor lugar!!!<br>
+      Respeito e muito carinho, é com eles.</p>
+    </div>
+  </section>
+
   <footer>
     <p>© 2025 PetSolux. Todos os direitos reservados.</p>
     <p>[Facebook] [Instagram] [Twitter]</p>
@@ -46,6 +56,9 @@
     <button onclick="acceptCookies()">Entendi</button>
   </div>
 
+  <!-- Botão voltar ao topo -->
+  <button id="backToTop" onclick="backToTop()">⬆️</button>
+
   <script src="script.js"></script>
 </body>
-</html>
+  </html>
